--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -85,7 +85,7 @@ $$f_{Y}(y)= \sigma^{-1/2}\exp[\frac{1}{2}(y-\mu)^2\sigma^{-1}]$$
 ## Distribuições Eliptícas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.04}
 
 
-
+![](imgs/g_func.png)
 
 ## Propriedade {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.04}
 
@@ -112,7 +112,7 @@ $$Y_i = \mu_i(\theta) + \epsilon_i$$
 
 $$Y_i = x_i^{T}\beta + e_i \quad \text{onde}\quad   e_i \sim \xi(0, \sigma^2)$$
 
-* $\mu_i(\theta) = x_i\beta$
+* $\mu_i(\theta) = x_i^T\beta$
 * $\Sigma_i(\theta) = \sigma^2$
 
 * Para o caso Heterocedastico $\Sigma_i(\theta) = \sigma_i^2$
@@ -204,7 +204,6 @@ fit |> summary()
 ::: incremental
 * Ajustar a implementação  da estrutura de covariância
 
-* Ajustar a atribuição das covariáveis no escopo da função
 
 * Reestruturar todas as funções do `stats` para funcionar na classe `generalreg`
 
