add non linear models

--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -1,15 +1,38 @@
-@book{hapke2019natural,
-  title={Natural Language Processing in Action: Understanding, analyzing, and generating text with Python},
-  author={Hapke, Hannes and Howard, Cole and Lane, Hobson},
+@phdthesis{loose2019condiccoes,
+  title={Condi{\c{c}}{\~o}es de regularidade para o modelo de regress{\~a}o com parametriza{\c{c}}{\~a}o geral},
+  author={Loose, La{\'\i}s Helen},
   year={2019},
-  publisher={Simon and Schuster}
+  school={Universidade de S{\~a}o Paulo}
 }
 
-@book{albrecht2020blueprints,
-  title={Blueprints for Text Analytics Using Python},
-  author={Albrecht, Jens and Ramachandran, Sidharth and Winkler, Christian},
-  year={2020},
-  publisher={O'Reilly Media}
+@phdthesis{perette2019implementaccao,
+  title={Implementa{\c{c}}{\~a}o no software estat{\'\i}stico R de modelos de regress{\~a}o normal com parametriza{\c{c}}{\~a}o geral},
+  author={Perette, Andr{\'e} Casagrandi},
+  year={2019},
+  school={Universidade de S{\~a}o Paulo}
 }
 
-@misc{goyal_2022, title={Roadmap to master NLP in 2022 NLP}, url={https://www.analyticsvidhya.com/blog/2022/01/roadmap-to-master-nlp-in-2022/}, journal={Analytics Vidhya}, author={Goyal, Chirag}, year={2022}, month={Mar}} 
+@article{lemonte2011multivariate,
+  title={Multivariate elliptical models with general parameterization},
+  author={Lemonte, Artur J and Patriota, Alexandre G},
+  journal={Statistical methodology},
+  volume={8},
+  number={4},
+  pages={389--400},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@book{wickham2019advanced,
+  title={Advanced r},
+  author={Wickham, Hadley},
+  year={2019},
+  publisher={CRC press}
+}
+
+@article{therneau2013r,
+  title={R survival package},
+  author={Therneau, Terry and Lumley, T},
+  journal={R Core Team},
+  year={2013}
+}
