--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -11,6 +11,9 @@ format:
         controls: true
         logo: "imgs/ufsm.png"
         smaller: false
+        bibliography: bib.bib
+        nocite: |
+                @*
 lang: pt
 ---
 
@@ -122,6 +125,12 @@ $$Y_i = x_i^{T}\beta + e_i \quad \text{onde}\quad   e_i \sim \xi(0, \sigma^2)$$
 
 $$Y_i = h(x, \theta) + e_i \quad \text{onde}\quad   e_i \sim \xi(0, \sigma^2)$$
 
+*  $Y_i =  \theta_1 + \dfrac{\theta_2}{2 + \theta_3x_i^{\theta_4}} + u_i$
+
+<br />
+
+*  $z_i =  \exp\bigg(\beta_0 + \dfrac{\beta_1x_1}{1 + \beta_3x_i}\bigg) + u_i$
+
 
 ## Estimação dos Parâmetros {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.04}
 
@@ -215,9 +224,6 @@ fit |> summary()
 
 * Entrar em mais uma luta com o *CRAN*
 
-::: footer
-morte ao `attach`
-:::
 
 
 :::
@@ -228,6 +234,8 @@ morte ao `attach`
 
 
 # Obrigado pela Atenção! {background-image="imgs/ufsm.png" background-opacity=0.02}
+
+# Bibliografia
 
 
 
