--- a/docs/bib.bib
+++ b/docs/bib.bib
@@ -36,3 +36,23 @@
   journal={R Core Team},
   year={2013}
 }
+
+@book{fang,
+  title={Symmetric multivariate and related distributions},
+  author={Fang, Kai Wang},
+  year={1990},
+  publisher={Chapman and Hall/CRC}
+}
+
+
+@article{melo2018improved,
+  title={Improved estimation in a general multivariate elliptical model},
+  author={Melo, Tatiane FN and Ferrari, Silvia LP and Patriota, Alexandre G},
+  journal={Brazilian Journal of Probability and Statistics},
+  volume={32},
+  number={1},
+  pages={44--68},
+  year={2018},
+  publisher={JSTOR}
+}
+
