--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "O Modelo de Regressão com Parametrização Geral"
 subtitle: "E Sua Implementação Computacional"
-author: "<br> Alisson Rosa <br> <br> Orientador: Prof. Laís Helen Loose"
+author: "<br> Alisson Rosa <br> <br> Orientadora: Prof. Laís Helen Loose"
 title-slide-attributes:
   data-background-image: "https://img.freepik.com/vector-premium/fondo-abstracto-puntos-lineas-que-cruzan-colores-azul-claro_444390-6877.jpg?w=2000"
   data-background-opacity: "0.04"
@@ -35,11 +35,22 @@ lang: pt
 
 <br />
 
-- Problemas?
+- Próximos Passos?
 :::
 
 
 
+## Histórico  {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.04}
+
+* Distribuições Elípticas - @fang
+
+* Modelos Elípticos com Parametrização Geral - @lemonte2011multivariate
+
+* Aprimoramento da Estimação dos Modelos - @melo2018improved
+
+* Condições de Regularidade - @loose2019condiccoes
+
+* Implementação Computacional Para o Caso da Distribuição Normal -  @perette2019implementaccao
 
 
 
@@ -50,11 +61,15 @@ lang: pt
 
 
 
-## Distribuições Eliptícas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
+
+
+
+
+## Distribuições Elípticas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
 
 O vetor aleatório $\mathbf{Y}$ tem distribuição elíptica se sua função densidade de probabilidade existe e é dada por:
 
-$$f_{\mathbf{Y}}(y)= |\Sigma|^{-1/2}g[(\mathbf{y}-\mathbf{\mu})^{T}\Sigma^{-1}(\mathbf{y}-\mathbf{\mu})]$$
+$$f_{\mathbf{Y}}(\mathbf{y})= |\Sigma|^{-1/2}g[(\mathbf{y}-\mathbf{\mu})^{T}\Sigma^{-1}(\mathbf{y}-\mathbf{\mu})]$$
 
 em que g é dita função geradora e satisfaz:
 
@@ -64,20 +79,18 @@ em que g é dita função geradora e satisfaz:
 ## Distribuições Eliptícas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
 
 * Para o caso da Normal univariada:
- * $\Sigma = \sigma$
- * $g(u) = \exp(\frac{-u}{2})$
+ * $\Sigma = \sigma^2$
+ * $g(u) = \exp(-\frac{u}{2})$
 
 ## Distribuições Eliptícas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
 
 
 $$f_{Y}(y)= |\Sigma|^{-1/2}g[(\mathbf{y}-\mathbf{\mu})^{T}\Sigma^{-1}(\mathbf{y}-\mathbf{\mu})]$$
 
-* $\Sigma = \sigma$
-* $g(u) = \exp(\frac{-u}{2})$
+* $\Sigma = \sigma^2$
+* $g(u) = \exp(-\frac{u}{2})$
 
-$$f_{Y}(y)= \sigma^{-1/2}\exp[-\frac{1}{2}(y-\mu)^2\sigma^{-1}]$$
-
-
+$$f_{Y}(y)= \sigma^{-1/2}\exp[-\frac{1}{2}(y-\mu)^2\sigma^{-2}]$$
 
 
 
@@ -88,7 +101,9 @@ $$f_{Y}(y)= \sigma^{-1/2}\exp[-\frac{1}{2}(y-\mu)^2\sigma^{-1}]$$
 
 
 
-## Distribuições Eliptícas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
+
+
+## Distribuições Elípticas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
 
 
 ![](imgs/g_func.png)
@@ -114,7 +129,11 @@ $$\mathbf{W} = A\mathbf{Y} + a  \sim  \xi_r(A\mathbf{\mu} + a, A\Sigma A^{T})$$
 
 Seja $\mathbf{Y_i}$ um vetor aleatório e $x_i$ covariáveis conhecidas, o modelo definido como:
 
-$$\mathbf{Y_i} = \mathbf{\mu}_i(\theta) + \mathbf{\epsilon}_i$$
+$$\mathbf{Y_i} = \mathbf{\mu}_i(\theta, x_i) + \mathbf{\epsilon}_i, \quad i=1\dots n$$
+
+<br />
+
+onde $\mathbf{\epsilon}_i \sim \xi_i(0, \Sigma_i(\theta, x_i))$
 
 ## Modelo de Regressão Linear {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.04}
 
@@ -123,18 +142,21 @@ $$Y_i = x_i^{T}\beta + e_i \quad \text{onde}\quad   e_i \sim \xi(0, \sigma^2)$$
 * $\mu_i(\theta) = x_i^T\beta$
 * $\Sigma_i(\theta) = \sigma^2$
 
-* Para o caso Heterocedastico $\Sigma_i(\theta) = \sigma_i^2$
+<br />
+
+* Para o caso Heterocedástico $\Sigma_i(\theta) = \sigma_i^2$
 
 
 ## Modelos não Lineares {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.04}
 
-$$Y_i = h(x, \theta) + e_i \quad \text{onde}\quad   e_i \sim \xi(0, \sigma^2)$$
+$$Y_i = h(x, \mathbf{\theta}) + u_i \quad \text{onde}\quad   u_i \sim \xi(0, \sigma^2)$$
 
 *  $Y_i =  \theta_1 + \dfrac{\theta_2}{2 + \theta_3x_i^{\theta_4}} + u_i$
 
 <br />
 
-*  $z_i =  \exp\bigg(\beta_0 + \dfrac{\beta_1x_1}{1 + \beta_3x_4}\bigg) + u_i$
+*  $z_i =  \exp\bigg(\beta_0 + \dfrac{\beta_1x_{1i}}{1 + \beta_3x_{4i}}\bigg) + u_i$
+
 
 
 ## Estimação dos Parâmetros {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.04}
@@ -149,6 +171,9 @@ Onde $\ell_i(\theta)=-\dfrac{1}{2}\log|\Sigma_i|+\log g(u_i)$ e
 * $u_i = z_i^{T}\Sigma_i^{-1}z_i$
 
 * $z_i = Y_i - \mu_i$
+
+
+
 
 # Objetivo {background-image="https://media.licdn.com/dms/image/D5612AQGIo_Wi-D3lmA/article-cover_image-shrink_720_1280/0/1660017898740?e=2147483647&v=beta&t=wM2JnLCd_rkk9rFn38oTo2uIj6NVYT4Rf0sDWSI2d6A" background-opacity=0.2}
 
@@ -217,7 +242,7 @@ fit |> summary()
 
 
 
-## Problemas Atuais {background-image="https://media.licdn.com/dms/image/D5612AQGIo_Wi-D3lmA/article-cover_image-shrink_720_1280/0/1660017898740?e=2147483647&v=beta&t=wM2JnLCd_rkk9rFn38oTo2uIj6NVYT4Rf0sDWSI2d6A" background-opacity=0.07}
+## Próximos Passos {background-image="https://media.licdn.com/dms/image/D5612AQGIo_Wi-D3lmA/article-cover_image-shrink_720_1280/0/1660017898740?e=2147483647&v=beta&t=wM2JnLCd_rkk9rFn38oTo2uIj6NVYT4Rf0sDWSI2d6A" background-opacity=0.07}
 
 ::: incremental
 * Ajustar a implementação  da estrutura de covariância
@@ -226,6 +251,8 @@ fit |> summary()
 * Reestruturar todas as funções do `stats` para funcionar na classe `generalreg`
 
 * Implementar modelos mais específicos
+
+* Escrever o artigo
 
 * Entrar em mais uma luta com o *CRAN*
 
