--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -76,13 +76,13 @@ em que g é dita função geradora e satisfaz:
 * $g:[0, \infty) \rightarrow [0, \infty]$
 * $\int_{0}^{\infty}u^{\frac{d}{2} -1}g(u)du < \infty$
 
-## Distribuições Eliptícas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
+## Distribuições Elípticas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
 
 * Para o caso da Normal univariada:
  * $\Sigma = \sigma^2$
  * $g(u) = \exp(-\frac{u}{2})$
 
-## Distribuições Eliptícas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
+## Distribuições Elípticas {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.06}
 
 
 $$f_{Y}(y)= |\Sigma|^{-1/2}g[(\mathbf{y}-\mathbf{\mu})^{T}\Sigma^{-1}(\mathbf{y}-\mathbf{\mu})]$$
@@ -90,7 +90,7 @@ $$f_{Y}(y)= |\Sigma|^{-1/2}g[(\mathbf{y}-\mathbf{\mu})^{T}\Sigma^{-1}(\mathbf{y}
 * $\Sigma = \sigma^2$
 * $g(u) = \exp(-\frac{u}{2})$
 
-$$f_{Y}(y)= \sigma^{-1/2}\exp[-\frac{1}{2}(y-\mu)^2\sigma^{-2}]$$
+$$f_{Y}(y)= \sigma^{-1/2}\exp\bigg(-\frac{1}{2}(y-\mu)^2\sigma^{-2}\bigg)$$
 
 
 
@@ -149,13 +149,13 @@ $$Y_i = x_i^{T}\beta + e_i \quad \text{onde}\quad   e_i \sim \xi(0, \sigma^2)$$
 
 ## Modelos não Lineares {background-image="https://www.slidebackground.com/uploads/statistics-background/statistics-success-accounting-video-19.jpg" background-opacity=0.04}
 
-$$Y_i = h(x, \mathbf{\theta}) + u_i \quad \text{onde}\quad   u_i \sim \xi(0, \sigma^2)$$
+$$Y_i = h(x, \mathbf{\theta}) + \epsilon_i \quad \text{onde}\quad   \epsilon_i \sim \xi(0, \sigma^2)$$
 
-*  $Y_i =  \theta_1 + \dfrac{\theta_2}{2 + \theta_3x_i^{\theta_4}} + u_i$
+*  $Y_i =  \theta_1 + \dfrac{\theta_2}{2 + \theta_3x_i^{\theta_4}} + \epsilon_i$
 
 <br />
 
-*  $z_i =  \exp\bigg(\beta_0 + \dfrac{\beta_1x_{1i}}{1 + \beta_3x_{4i}}\bigg) + u_i$
+*  $z_i =  \exp\bigg(\beta_0 + \dfrac{\beta_1x_{1i}}{1 + \beta_3x_{4i}}\bigg) + \epsilon_i$
 
 
 
